<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.usp.ime.retrobreaker.MainActivity"
    tools:ignore="MergeRootFrame" >

    <TextView
        android:id="@+id/mainHighScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/high_score"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/newGameButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/new_game" />

    <Button
        android:id="@+id/resetScoreButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_high_score" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/difficult" />

    <Spinner
        android:id="@+id/levelSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp" />

    <CheckBox
        android:id="@+id/soundEffectsCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enable_sound_effects"
        android:layout_marginTop="8dp"
        android:onClick="onCheckBoxClicked" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/special_bricks" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:drawablePadding="8dp"
        android:drawableLeft="@drawable/explosive_brick"
        android:text="@string/explosive_brick_explanation" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:drawablePadding="8dp"
        android:drawableLeft="@drawable/moveable_brick"
        android:text="@string/moveable_brick_explanation" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:drawablePadding="8dp"
        android:drawableLeft="@drawable/hard_brick"
        android:text="@string/hard_brick_explanation" />
</TableLayout>