<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <br.usp.ime.retrobreaker.game.TouchSurfaceView
        android:id="@+id/opengl"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/highScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/high_score"
            android:textStyle="bold"
            android:visibility="visible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <TextView
                android:id="@+id/score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:text="@string/score"
                android:textStyle="bold"
                android:visibility="visible"
                android:layout_marginEnd="8dp" />

            <TextView
                android:id="@+id/scoreMultiplier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:text="@string/multiplier"
                android:textStyle="bold"
                android:visibility="visible"
                android:layout_marginEnd="8dp" />

            <TextView
                android:id="@+id/lives"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:text="@string/lives"
                android:textStyle="bold"
                android:visibility="visible"
                android:layout_marginEnd="8dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/ready"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:text="@string/ready"
            android:visibility="invisible"
			android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_marginEnd="8dp" />

        <Button
            android:id="@+id/pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="pause" />

    </LinearLayout>
</RelativeLayout>